--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </div>
 <div id="contents">
 <h2>実験１</h2>
-<p>プログラム改変ではコードの__________の部分を担当した。<br></p> 
-<p>また、〇に与えた固有値は_____とした。理由は次の通りである。<br></p>
-  （ここに実測の結果や理論的な推測などを書く）<br></p> 
+<p>プログラム改変ではコードのmain goalの部分を担当した。<br></p> 
+<p>また、〇に与えた固有値は3.4とした。理由は次の通りである。<br></p>
+  3.3や3.2にしたときはほとんど勝つことができておらず勝率が50%くらいになっていて3.5にしたら差をつけて勝ってしまったのでその間の3.4にしました。<br></p> 
 <h2>実験２</h2>
 <p>このレポートはGithubの公開ページで作成されたものである。<br></p>
 </div>
